2006-03-16  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/lpmodel.hxx
	* source/numeric/lpmodel.cxx: added a bunch of new methods to 
	lp::Model to deal with manipulation of temporary model object during
	solver run.

	* source/numeric/lpsimplex.cxx: added pre- and post-run process
	routines to reduce the size of temporary model object in order to 
	improve the chance of finding a solution.  Not sure whether this is
	truly effective.

	* workben/Makefile
	* workben/addon_pkg/Makefile_build: changed CPP to CXX.

	* workben/simplex_test.cxx: modified test case.

2006-02-16  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/numeric/lpsimplex.cxx: fixed incorrect way to access element
	in the first column of RHS matrix.  This error caused the two-phase 
	search to go into an infinite loop.

2006-02-15  Tor Lillqvist  <tml@novell.com>

	Enable building of scsolver with MSVC7.1:
	
	* source/inc/baselistener.hxx: Include cppu/macros.hxx to get
	SAL_CALL definition.

	* source/inc/baselistener.hxx
	* source/inc/listener.hxx: Add SAL_CALL to those methods which
	override methods that have the SAL_CALL decoration.

	* source/numeric/matrix.cxx: No #warning in MSVC. Use #warning
	only with gcc.

	* source/numeric/nlpqnewton.cxx: Use ::sqrt() instead of
	std::sqrt() with MSVC, where std::sqrt() causes compilation errors
	related to the complex sqrt() functions in STL.

2006-02-13  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/lpsimplex.hxx:
	* source/numeric/lpsimplex.cxx: added a new method to disable
	two-phase intial search to prevent nested infinite two-phase
	search loop.

	* workben/simplex_test.cxx: minor tweak.

	* workben/addon_pkg/Makefile_build: changed variable names.


2006-02-09  Kohei Yoshida  <kohei.yoshida@gmail.com>

	* source/inc/numeric/type.hxx: added descriptions for
	Equality enum.

	* source/numeric/lpmodel.cxx: added function comment for
	Model::getCostVector().
