@@ -1,3 +1,9 @@
+2006-03-26  Kohei Yoshida  <kohei.yoshida@gmail.com>
+
+	* source/inc/numeric/lpsimplex.cxx: worked on fixing initial solution 
+	search algorithm, and did some code cleanup.  Moved two structs inside
+	BoundedRevisedSimplexImpl class since they are only used in that class.
+
 2006-03-16  Kohei Yoshida  <kohei.yoshida@gmail.com>
 
 	* source/inc/numeric/lpmodel.hxx
